--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # Note -- It is better to have specified exact files to ignore rather than using wildcards such as '**' or '*'.
 
+# Database Files
+AI_MERCH_STORE_database_data
+
 # Node.js (server-side) related files
 server/node_modules
-server/config/.env
+config/.env
 server/logs
 server/tmp
 server/*.log
@@ -12,7 +15,7 @@ server/dist
 
 # React app (client-side) related files
 client/node_modules
-client/config/.env
+config/.env
 client/.cache
 client/build
 
