--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,8 @@
 	"main": "index.js",
 	"type": "module",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node index.js",
-		"dev": "nodemon index.js"
+		"start": "nodemon index.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
 	"author": "Harsh Deepanshu <harshdeepanshustrix@gmail.com>",
@@ -15,6 +14,7 @@
 	"dependencies": {
 		"colors": "^1.4.0",
 		"dotenv": "^16.4.5",
-		"express": "^4.21.0"
+		"express": "^4.21.0",
+		"nodemon": "^3.1.7"
 	}
 }
